<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CreditApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="attendance">出欠</string>
    <string name="attendance_num">出席回数</string>
    <string name="room">教室</string>
    <string name="subject_name">科目名</string>
    <string name="hour">時限</string>
    <string name="setting_button">設定</string>
    <string name="date">日付</string>
    <string name="calendar">カレンダー</string>
    <string name="week">週</string>
    <string name="no_data">データが存在しません</string>
    <string name="monday">月</string>
    <string name="tuesday">火</string>
    <string name="wednesday">水</string>
    <string name="thursday">木</string>
    <string name="friday">金</string>
    <string name="null1">null1</string>
    <string name="subj_message1">取得済科目を入力してください。</string>
    <string name="subj_message2">取得済科目がない方はそのままにしてください。\nあとから修正もできます。</string>
    <string name="add">追加</string>
    <string name="register_message">科目を登録します。情報を入力してください。</string>
    <string name="teacher">先生</string>
    <string name="term">ターム</string>
    <string name="days">曜日</string>
    <string name="credit">単位</string>
    <string name="register">登録</string>
    <string name="complete">完了</string>
    <color name="olive">#808000</color>
    <color name="chocolate">#d2691e</color>
    <color name="grey05">#cccccc</color>
    <color name="white">#FFFFFF</color>
    <color name="Black">#000000</color>
    <color name="skyblue">#87ceeb</color>
    <color name="linen">#faf0e6</color>
    <color name="royalblue">#4169e1</color>
    <color name="slateblue">#6a5acd</color>
    <color name="saddlebrown">#8b4513</color>
    <string-array name="time_select">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="days_select">
        <item>月</item>
        <item>火</item>
        <item>水</item>
        <item>木</item>
        <item>金</item>
        <item>土</item>
        <item>日</item>
    </string-array>
    <string-array name="term_select">
        <item>前期</item>
        <item>後期</item>
        <item>通年</item>
        <item>夏期</item>
        <item>春期</item>
        <item>冬期</item>
    </string-array>
    <string-array name="credit_select">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>