<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/message_text_credit"
        android:text="@string/subj_message1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/message_text_credit2"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:text="@string/subj_message2"/>

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_height="413dp"
        android:layout_width="match_parent"
        android:layout_weight="0.26"
        android:fadeScrollbars="false">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_table"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="2dp">
        </TableLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete"
        android:id="@+id/complete_button"
        android:layout_gravity="center_horizontal" />
</LinearLayout>